--- a/CPPVersionControlled.vcxproj
+++ b/CPPVersionControlled.vcxproj
@@ -142,6 +142,9 @@
     <ClCompile Include="CPPVersionControlled.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Feature.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
